<resources>
    <string name="app_name">FitSetGo</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="camera">Camera</string>
    <string name="workout">Workout</string>
    <string name="shows_the_result">Shows the result</string>
    <string name="your_weekly_target">Your weekly target</string>
    <string name="apr_9_apr_15">May 29 - Jun 4</string>
    <string name="jan_16_apr_9">Apr 16 - May 30</string>
    <string name="_0_7">2/7</string>
    <string name="achieved">Achieved</string>
    <string name="go_to_next_screen">Go to next screen</string>
    <string name="_0_of_150">0 of 150</string>
    <string name="week_benefit_txt">Scoring 150 Heart Points a week can help you live longer, sleep better and boost your mood</string>
    <string name="logo">Logo</string>
    <string name="your_daily_goals">Your daily goals</string>
    <string name="last_7_days">Last 7 days</string>
    <string name="home_floating_action_button">Home floating action button</string>
    <string name="yesterday">Yesterday</string>
    <string name="_69kg">69kg</string>
    <string name="remove_card">Remove card</string>
    <string name="trends">Trends</string>
    <string name="discover">Discover</string>
    <string name="stay_fit_with_me">Stay fit #With Me</string>
    <string name="follow_curated_playlists">Follow along with curated playlists to help you stay healthy from home</string>
    <string name="learn_about_sleep">Learn which factor sleep needs, and how to find the right amount for you</string>
    <string name="how_much_sleep_you_need">How much sleep you need</string>
    <string name="_54">54</string>
    <string name="_72">72</string>
    <string name="apr_8">May 9</string>
    <string name="weight">Weight</string>
    <string name="heart_points">Heart Points</string>
    <string name="steps_count">Steps Count</string>
    <string name="youtube_logo">Youtube logo</string>
    <string name="playlist">Playlist</string>
    <string name="card_logo">Card logo</string>
    <string name="heart_pts">Heart Pts</string>
    <string name="steps">Steps</string>
    <string name="locked_unlocked_league">Locked/unlocked League</string>
    <string name="current_league">Current League</string>
    <string name="_18">18</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="reyy">reyy</string>
    <string name="_54_xp">54 XP</string>
    <string name="amethyst_league">Amethyst League</string>
    <string name="top_7_advance_to_next_league">Top 7 Advance to next league</string>
    <string name="_6_days">6 days</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walk_more_to_top">Walk more to reach the top of the leaderboard.</string>
    <string name="welcome_back">Welcome back !</string>
    <string name="sign_in_to_continue">Sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="create_an_account">Create an account</string>
    <string name="confirm_password">Confirm password</string>
    <string name="proceed">Sign Up</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="log_in">Log in</string>
    <string name="password_should_be_8_characters_long">Password should be 8 characters long</string>
    <string name="please_fill_out_the_form_below_to_continue">Please fill out the details below to continue.</string>
    <string name="fc_btn_txt">Open Pose Predictor</string>
</resources>