<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginVertical="4dp"
    android:layout_marginEnd="20dp"
    app:strokeColor="@color/gray"
    app:strokeWidth="2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_gray"
        android:padding="8dp">

        <TextView
            android:id="@+id/sfi_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:text="@string/workout"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/sfi_youtube_logo"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:contentDescription="@string/youtube_logo"
            android:src="@drawable/ic_youtube_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sfi_title" />

        <TextView
            android:id="@+id/sfi_playlist_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/playlist"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/sfi_youtube_logo"
            app:layout_constraintTop_toBottomOf="@id/sfi_title" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/item_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/gray"
            app:strokeWidth="2dp">

            <ImageView
                android:id="@+id/sfi_exercise_image"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:contentDescription="@string/card_logo"
                android:padding="20dp"
                android:src="@drawable/ic_weightlifting"
                app:tint="@color/red" />

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>