<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".loginsignup.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="8dp">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:letterSpacing="0.04"
            android:text="@string/welcome_back"
            android:fontFamily="@font/poppins"
            android:textColor="@color/SecondaryColorLight"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline4" />

        <TextView
            android:id="@+id/SignTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:text="@string/sign_in_to_continue"
            android:fontFamily="@font/poppins"
            android:textColor="@color/SecondaryColorLight"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/business_address_in"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#404044"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/primaryColor"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/SignTextView">

            <EditText
                android:id="@+id/emailInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:fontFamily="@font/poppins"
                android:inputType="textEmailAddress"
                android:textColor="@color/inputTextColor"
                android:textCursorDrawable="@drawable/custom_cursor" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_in"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:textColorHint="#404044"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:boxStrokeColor="@color/primaryColor"
            app:endIconMode="password_toggle"
            app:hintTextColor="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/business_address_in">

            <EditText
                android:id="@+id/paswordInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:fontFamily="@font/poppins"
                android:inputType="textPassword"
                android:textColor="@color/inputTextColor"
                android:textCursorDrawable="@drawable/custom_cursor" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/poppins"
            android:text="@string/forgot_password"
            android:textColor="@color/SecondaryColorLight"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password_in" />

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/forget_password">

            <com.google.android.material.progressindicator.CircularProgressIndicator
                android:id="@+id/circularPBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp"
                android:indeterminate="true"
                android:visibility="gone"
                app:indicatorColor="@color/primaryColor" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/logInButton"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="32dp"
                android:layout_marginTop="26dp"
                android:layout_marginRight="32dp"
                android:background="@drawable/layout_button"
                android:text="@string/sign_in"
                android:fontFamily="@font/poppins"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:backgroundTint="@null" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true">

                <TextView
                    android:id="@+id/tv1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/don_t_have_an_account"
                    android:textColor="@color/black"
                    android:fontFamily="@font/poppins"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/SignUpText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="20dp"
                    android:layout_toEndOf="@+id/tv1"
                    android:text="@string/sign_up"
                    android:fontFamily="@font/poppins"
                    android:textColor="@color/primaryColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </RelativeLayout>
        </RelativeLayout>

<!--        <TextView-->
<!--            android:id="@+id/user_name"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:text="@string/or"-->
<!--            android:fontFamily="@font/poppins"-->
<!--            android:visibility="gone"-->
<!--            android:textColor="@color/black"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@+id/relativeLayout2" />-->

<!--        <LinearLayout-->
<!--            android:id="@+id/linearLayout"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="12dp"-->
<!--            android:orientation="horizontal"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/user_name">-->

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/googleSignIn"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                app:strokeColor="#99FF9900"-->
<!--                app:strokeWidth="1dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="24dp"-->
<!--                    android:layout_height="24dp"-->
<!--                    android:layout_marginHorizontal="28dp"-->
<!--                    android:layout_marginVertical="16dp"-->
<!--                    android:src="@drawable/googlepng" />-->

<!--            </com.google.android.material.card.MaterialCardView>-->

<!--            <com.google.android.material.card.MaterialCardView-->
<!--                android:id="@+id/facebook_button"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_marginStart="16dp"-->
<!--                app:cardCornerRadius="12dp"-->
<!--                app:strokeColor="#99FF9900"-->
<!--                app:strokeWidth="1dp">-->

<!--                <ImageView-->
<!--                    android:layout_width="24dp"-->
<!--                    android:layout_height="24dp"-->
<!--                    android:layout_marginHorizontal="28dp"-->
<!--                    android:layout_marginVertical="16dp"-->
<!--                    android:src="@drawable/facebookpng" />-->

<!--            </com.google.android.material.card.MaterialCardView>-->

<!--        </LinearLayout>-->

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>